www/static/css/sharkscout.css
/***** Bootstrap Overrides *****/

.navbar {
    border-radius: 0;
}

/* Allow left-floated navbar-toggle, square up the margins */
.navbar-toggle {
    float: left;
    margin-left: 8px;
    margin-right: 0;
}
* + .navbar-toggle {
    float: right;
    margin-left: 0;
    margin-right: 8px;
}

/* Allow nested navbar */
.navbar .navbar {
    margin-bottom: 0;
}

/* btn spacing */
.btn + .btn,
.btn + .modal + .btn {
    margin-left: 8px;
}
.navbar-toggle + .btn.pull-right {
    margin-right: 8px;
}

/* Set nav-tabs/tab-page defaults */
.tab-page:not(.active) {
    display: none;
}

.btn-group .input-group input[type="number"] {
    min-width: 50px;
}

/* Get rid of unnecessary top margin/padding */
* > h1:first-child, * > .h1:first-child,
* > h2:first-child, * > .h2:first-child,
* > h3:first-child, * > .h3:first-child,
* > .pagination:first-child {
    margin-top: 0;
}
.table:last-child {
    margin-bottom: 0;
}

/* Force .text-center */
.text-center th {
    text-align: center;
}

/* Table tweaks */
.table th[rowspan],
.table td[rowspan] {
    vertical-align: middle !important;
}
.table th > ul,
.table td > ul {
    margin: 0;
    padding-left: 20px;
}
.table th > ul > li,
.table td > ul > li {
    text-indent: -5px;
}
.table-bordered .border-bottom-dark th,
.table-bordered .border-bottom-dark td {
    border-bottom-color: #999999;
}


/***** Bootstrap Additions *****/

.no-margin {
    margin: 0 !important;
}
.no-padding {
    padding: 0 !important;
}

.b, .strong {
    font-weight: 700;
}
.em {
    font-style: italic;
}

.trim-text {
    display: inline-flex;
}

.hide-next + .hide-next {
    display: none;
}
.hide-following ~ .hide-following {
    display: none;
}
.hide-last:last-child {
    display: none;
}

.inline-min {
    position: relative;
    width: auto;
    float: left;
}
.inline-min + .inline-min {
    margin-left: 10px;
}
/* Terrible width:auto hack */
.input-group.inline-min {
    max-width: 0;
}
.input-group.inline-min .form-control,
.input-group.inline-min .selectize-input {
    min-width: 100px;
}

/* Footer */
.footer-spacer {
    height: 70px;
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 70px;
    padding: 15px;
    background-color: #f8f8f8;
    border-color: #e7e7e7;
    text-align: center;
    font-style: italic;
}

/* Alert sizes */
.alert-sm {
    padding: 10px;
    margin-bottom: 15px;
}
.alert-sm.alert-dismissable,
.alert-sm.alert-dismissible {
    padding-right: 30px;
}



/***** Selectize Overrides *****/

.selectize-dropdown.form-control {
    position: absolute;
}



/***** DataTables Overrides *****/

/* Get rid of unnecessary top margin/padding */
table.dataTable:first-child {
    margin-top: 0 !important;
}
table.dataTable:last-child {
    margin-bottom: 0 !important;
}


/***** Font Awesome Overrides/Additions *****/

/* Allow 1x sized stacked icons */
.fa-stack-half {
    width: 2em;
    line-height: inherit;
    font-size: 0.5em;
}

/* Fix line-height when fa-stack gets a font-size */
.fa-stack .fa-stack-1x {
    line-height: 2em;
}
.fa-stack .fa-stack-2x {
    line-height: 1em;
}

.navbar-text .fa-stack {
    vertical-align: bottom;
}


/***** loaders Additions *****/

.loaders-2x.line-scale-pulse-out-rapid > div {
    width: calc(4px * 2);
    height: calc(35px * 2);
    border-radius: calc(2px * 2);
    margin: calc(2px * 2);
}


/***** icomoon Overrides/Additions *****/

.if,
.is {
    display: inline-block;
    vertical-align: text-top;
}

.if.if-lg,
.is.is-lg {
    font-size: 75px;
}
.if.if-xl,
.is.is-xl {
    font-size: 100px;
}


/***** Custom *****/

/* Defaults */
html {
    height: 100%;
}
body {
    position: relative;
    min-height: 100%;
}

.click-through {
    pointer-events: none;
}

.opacity-25 {
    opacity: 0.25;
    filter: alpha(opacity=25);
}

.font-25vh {
    font-size: calc(25vh);
}

/* CSS tricks */
.center-viewport {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Get rid of number input up/downs */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type="number"] {
    -moz-appearance: textfield;
}


/***** Custom Styling *****/

/* navbar-brand, navbar-text styling */
.navbar-brand,
.navbar-text {
    margin: 0;
    padding: 8px 15px 8px 8px;
    font-size: 34px;
    line-height: 34px;
}


/* Overlay mask element */
.mask {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.50);
}

/* FIRST colors */
/* Alliance colors for Bootstrap tables */
.table > tbody > tr.red,
.table > tbody > tr > td.red,
.red .table > tbody > tr {
    background-color: #FFEEEE;
}
.table-striped > tbody > tr.red:nth-of-type(2n+1),
.table-striped > tbody > tr:nth-of-type(2n+1) > td.red,
.red .table-striped > tbody > tr:nth-of-type(2n+1) {
    background-color: #FFE5E5;
}
.table > tbody > tr.blue,
.table > tbody > tr > td.blue,
.blue .table > tbody > tr {
    background-color: #EEEEFF;
}
.table-striped > tbody > tr.blue:nth-of-type(2n+1),
.table-striped > tbody > tr:nth-of-type(2n+1) > td.blue,
.blue .table-striped > tbody > tr:nth-of-type(2n+1) {
    background-color: #E5E5FF;
}
/* Alliance colors for Bootstrap btn-group */
.btn-group.red .btn,
.btn.red {
    background-color: #FFEEEE;
}
.btn-group.red .btn.active,
.btn.red.active {
    background-color: #FF0000;
}
.btn-group.blue .btn,
.btn.blue {
    background-color: #EEEEFF;
}
.btn-group.blue .btn.active,
.btn.blue.active {
    background-color: #3333FF;
}
/* Alliance colors for panel-heading */
.panel.red > .panel-heading,
.panel > .panel-heading.red {
    background-color: #FFCCCC;
}
.panel.blue > .panel-heading,
.panel > .panel-heading.blue {
    background-color: #CCCCFF;
}
/* Blue banners */
.fa.fa-bookmark {
    color: #0066b3;
}

